--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,19 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import "~materialize-css/dist/css/materialize.min.css";
+
+input.orange-input {
+  border-bottom: 1px solid #fff !important;
+  box-shadow: 0 1px 0 0 #fff !important;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+input.orange-input + label {
+  color: #fff !important;
+}
+
+input.orange-input:focus {
+  border-bottom: 1px solid #eca058 !important;
+  box-shadow: 0 1px 0 0 #eca058 !important;
+}
+
+input.orange-input:focus + label {
+  color: #eca058 !important;
 }
